# check-type-align

./: CMakeLists.txt  README.md
.github/ctest/: ci.cmake  ctest.cmake  macos.cmake  ubuntu.cmake  windows.cmake
.github/workflows/: ci.yml
.github/workflows/disabled/: ci.yml
cmake/: CheckTypeAlign.c.in  CheckTypeAlignConfig.cmake
test/: CMakeLists.txt  CheckTypeAlign.c  CheckTypeAlign.cxx  config.h.in  config.hxx.in  someclass.hxx
